chore: update copyright

--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@ Follow me on instagram: https://www.instagram.com/code_with_vic/ -->
 
 				<!-- Footer -->
 					<footer id="footer">
-						<p class="copyright">&copy; Created by : <a href="https://www.youtube.com/watch?v=3cgWwT4bpKU&list=PLPXR5c0kwv3FX8urLzWiSpYm9cqSSOVsN">Vikrant Bhat</a>.</p>
+						<p class="copyright">&copy; Created by : <a href="https://twitter.com/vikrantbhat1022">Vikrant Bhat</a>.</p>
 					</footer>
 			</div>
 
