no index meta tag

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@ Follow me on instagram: https://www.instagram.com/code_with_vic/ -->
 <html>
 	<head>
 		<title>Artistic Humans</title>
+		<meta name="robots" content="noindex, nofollow" />
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
